# SlicerDICOMWeb

./: CMakeLists.txt  README.md
DICOMWebInterface/: DICOMWebInterface.py
DICOMwebInterface/: CMakeLists.txt  DICOMwebInterface.py
StudyBrowser/: index.html
